--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <section id="home" class="section">
         <h1>Welcome to My Portfolio</h1>
-        <p>Hi, I'm [Your Name], a passionate Java developer.</p>
+        <p>Hi, I'm Karimulla Shaik, a passionate Java developer.</p>
     </section>
 
     <section id="skills" class="section">
